# DBCI

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  advanced.html  api.html  formatting.sh  genindex.html  index.html  license  objects.inv  push2pypi.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-formatting.yml  docs-publish.yml  publish.yml  random-test.yml  run-pytest.yml  test-docs.yml
_modules/: index.html
_modules/diff_binom_confint/: _applications.html  _binom_confint.html  _confint.html  _diff_binom_confint.html
_sources/: advanced.rst.txt  api.rst.txt  index.rst
_static/: documentation_options.js
diff_binom_confint/: __init__.py  _applications.py  _binom_confint.py  _confint.py  _diff_binom_confint.py  _utils.py
diff_binom_confint/_specials/: __init__.py  _wang.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/: __init__.py  _binom_confint.py  _diff_binom_confint.py
streamlit_app/: requirements.txt  streamlit_app.py
streamlit_app/.streamlit/: config.toml
test/: requirements.txt  test_applications.py  test_bci.py  test_confint.py  test_dbci.py  test_random.py  test_specials.py  test_utils.py
test/test-data/: example-10-10-vs-0-20.csv  example-56-70-vs-48-80.csv  example-84-101-vs-89-105.csv  example-84-101.csv  example-9-10-vs-3-10.csv  make-risk-report-train.csv  make-risk-report-val.csv  newcombee.csv
