[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diff-binom-confint"
dynamic = ["version"]
description = "Computation of confidence intervals for binomial proportions and for difference of binomial proportions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "deprecate-kwargs",
    "Deprecated",
    "Jinja2",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
    "tabulate",
]

[project.optional-dependencies]
acc = [
    "numba",
]
docs = [
    "sphinx<7.0",
    "nbsphinx",
    "sphinx-theme",
    "pydata-sphinx-theme",
    "sphinx-rtd-theme",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "sphinx-markdown-tables",
    "sphinx-copybutton",
    "sphinx-multiversion",
    "sphinx-design",
    "sphinxcontrib-napoleon",
    "sphinx-emoji-favicon",
    "sphinxemoji",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-proof",
    "numpydoc",
]
dev = [
    "numba",
    "pandas",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tqdm",
    "rpy2",
]
test = [
    "pandas",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tqdm",
    "rpy2",
]

[project.urls]
Homepage = "https://github.com/DeepPSP/DBCI"

[tool.hatch.version]
path = "diff_binom_confint/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/diff_binom_confint",
]
